<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wy_lij_maila"
                android:layout_alignParentTop="true"
                android:layout_marginTop="7dp"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textColor="@color/colorToolBarDark"
                android:textStyle="bold"
                android:id="@+id/text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mail_text"
                android:textSize="35sp"
                android:textColor="@color/colorToolBar"
                android:textStyle="bold"
                android:layout_below="@id/text"
                android:text="@string/adres"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mail_adres"
                android:layout_below="@id/text"
                android:layout_toRightOf="@id/mail_text"
                android:textColorHint="@color/colorToolBar"
                android:hint="@string/wpisz_swojego_maila"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mail_adres"
                android:textSize="30sp"
                android:textColor="@color/colorToolBar"
                android:textStyle="bold"
                android:text="@string/temat"
                android:id="@+id/topic_text"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/topic_text"
                android:layout_below="@id/mail_adres"
                android:textColorHint="@color/colorToolBar"
                android:id="@+id/topic"
                android:hint="@string/wpisz_temat"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info_text"
                android:textSize="25sp"
                android:textColor="@color/colorToolBar"
                android:layout_below="@id/topic"
                android:text="@string/wiadomo_mail"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/info"
                android:textColorHint="@color/colorToolBar"
                android:layout_below="@id/info_text"
                android:hint="@string/twoja_wiadomo"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/send"
                android:padding="10dp"
                android:textSize="25sp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_style"
                android:textColor="@color/colorBack"
                android:text="@string/send"
                android:layout_below="@id/info"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>