<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_item"
        android:textSize="25sp"
        android:textColor="@color/colorBack"
        android:padding="10dp"
        android:background="@drawable/button_style"
        android:text="@string/szukaj"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_item"
        android:text="@string/kategorie"
        android:textColor="@color/colorToolBarDark"
        android:textSize="30sp"
        android:id="@+id/list_search_text"/>
    <Spinner
        android:id="@+id/list_search"
        android:layout_toEndOf="@id/list_search_text"
        android:layout_below="@id/search_item"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlSymmetry" />

    <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:bar_color="@color/colorToolBar"
        app:bar_highlight_color="@color/colorToolBarDark"
        app:left_thumb_color="@color/colorToolBarDark"
        app:right_thumb_color="@color/colorToolBarDark"
        android:layout_below="@+id/list_search"
        android:id="@+id/search_seekbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_seekbar"
        android:layout_alignStart="@id/search_seekbar"
        android:textSize="25sp"
        android:textColor="@color/colorToolBar"
        android:text="@string/min"
        android:id="@+id/search_seekbar_min"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_below="@+id/search_seekbar"
        android:layout_alignEnd="@id/search_seekbar"
        android:text="@string/max"
        android:textColor="@color/colorToolBar"
        android:id="@+id/search_seekbar_max"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@id/search_seekbar_min">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_layout"
            android:orientation="vertical"/>
    </ScrollView>
</RelativeLayout>