<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/basket_history"
        android:background="@drawable/button_style"
        android:textColor="@color/colorBack"
        android:text="@string/historia_zakup_w"
        android:layout_margin="10dp"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/basket_history"
        android:layout_above="@id/basket_buy"
        android:id="@+id/basket_list"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_below="@id/basket_list"
        android:layout_alignParentStart="true"
        android:id="@+id/basket_sum_text"
        android:visibility="invisible"
        android:text="@string/suma"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="kjskjdksajkdj"
        android:textSize="30sp"
        android:layout_below="@id/basket_list"
        android:layout_toRightOf="@id/basket_sum_text"
        android:layout_toLeftOf="@id/basket_buy"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"
        android:id="@+id/basket_sum"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorBack"
        android:id="@+id/basket_buy"
        android:background="@drawable/button_style"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/kup"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:id="@+id/basket_empty"
        android:text="Koszyk jest pusty"/>
</RelativeLayout>